--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
   flutter_local_notifications: ^1.2.2
+  firebase_messaging: ^6.0.12
+  flutter_staggered_animations: ^0.1.2
+  shared_preferences: ^0.5.6+3
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
